# chat2389

./: .dockerignore  .firebaserc  .gitignore  .mise.toml  .parcelrc  CLAUDE.md  Dockerfile  README.md  biome.json  docker-compose.dev.yml  docker-compose.yml  expo_plan.md  features.md  firebase.json  firestore.rules  fly.toml  next.config.js  package.json  pyproject.toml  requirements.txt  server.py  tailwind.config.js  todo.md
.github/workflows/: expo-deploy.yml  expo-tests.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
app/: .gitignore  README.md  biome.json  error.js  jest.config.js  jest.setup.js  layout.js  package-lock.json  package.json  page.js  playwright.config.ts
app/__mocks__/: svgMock.js
app/api/: ApiInterface.ts  ApiProvider.ts  BackendSelector.tsx  FirebaseApiClient.ts  MockApiClient.ts  config.ts
app/api/rooms/: route.js
app/app/: _layout.tsx  index.tsx
app/components/: ChatBox.js  ChatInterface.tsx  DeviceSettings.tsx  Login.tsx  MediaControls.tsx  VideoContainer.tsx  VideoControls.js  VideoGrid.tsx
app/lib/: signaling.js  webrtc.js
app/playwright/: app.spec.ts
app/room/: page.js
app/services/: chat.ts  media.ts  signaling.ts  webrtc.ts
app/styles/: globals.css
app/theme/: index.ts
src/css/: index.css  room.css
src/html/: index.html  room.html
src/js/: chat.js  index.js  media.js  room.js  signaling.js  webrtc.js
templates/: index.html  room.html
tests/backend/: conftest.py  test_edge_cases.py  test_health_api.py  test_room_api.py  test_signaling_api.py
tests/e2e/: playwright.config.js  room-e2e.js
(+26 files in other folders)
