[project]
name = "chat"
version = "0.1.0"
description = "WebRTC Video Chat Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "opencv-python>=4.11.0.86",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-flask>=1.3.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.3.0",
    "werkzeug>=3.1.3",
]

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I", "N", "W"]
line-length = 88
target-version = "py312"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "public",
    "node_modules",
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py

[tool.ruff.isort]
known-first-party = ["server"]
